--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </list>
       </section>
     </div>
+    <h2 class="center">Contact me</h2>
     <section id="contact" class="section-contact">
-      <h3 class="contact__h3">Contact me:</h3>
       <h3>Phone</h3>
       <a class="link__blue" href="tel:+4915124062234"><u>0151/24062234</u></a>
       <h3>E-Mail</h3>
@@ -76,7 +76,7 @@
         <u>ansgar.reimann@protonmail.com</u>
       </a>
     </section>
-    <h3>Find me on</h3>
+    <h2 class="center">Find me on</h2>
     <section id="teaser" class="section-findme">
       <figure>
         <a href="https://codepen.io/ansmann/">
