--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <article>
           Als Neu-Hamburger und neuer Fisch begrüße ich euch auf meiner ersten
           eigenen Seite. Es lohnt sich öfter vorbei zu sehen, da ich die Seite
-          mit Fortschreiten meines Web Developer Kurses weiterentwickeln werde.
+          mit Fortschreiten meines Web Developer Kurses weiterentwickeln
+          werde.
           Viel Spaß beim Stöbern!
         </article>
       </section>
@@ -143,13 +144,14 @@
           </article>
         </section>
       </div>
+
       <div class="section-aboutme__education">
         <h2 id="education">Bildungsweg</h2>
         <list>
           <ul class="aboutme__list">
             <li>
               <h4>Seit März 2019</h4>
-              Neue Fische GmbH: Web Developer
+              neuefische GmbH: Web Developer
               Bootcamp
             </li>
             <li>
@@ -175,6 +177,9 @@
           </ul>
         </list>
       </div>
+      <img
+        src="https://iqdjuq.dm.files.1drv.com/y4mbUXCUajoBJlsoShxEdCGdPLguDP1ZEtN4MEVRUo2O-2QtWumoUFXqEuW7Hm-vZejtFI3DRSFMEv8zyvkqxOVu0ol0wZ6HzPVFL_ixBHP0nkUFMAhrF5kI_CLlM57d3mdxioYVq3E3FnAmWhsY6_ytTt8T4K10mZak2IHW8MZxjpGUhAxpggxckDodqDL7vDRWqYHcr9SOZpNSjpV_DHjYg?width=2048&height=1536&cropmode=none"
+        width="100%" />
       <div>
         <h2 id="cv">Berufliche Laufbahn</h2>
         <list>
@@ -182,32 +187,26 @@
             <li>
               <h4>Januar 2019 - März 2019</h4>Zeit mit der Familie
               verbringen
-
             </li>
             <li>
               <h4>April 2018 - Dezember 2018</h4>E-Commerce Manager Fon3
               GmbH
-
             </li>
             <li> <h4>Februar 2018 - April 2018</h4>Arbeit suchend
-
             </li>
             <li>
               <h4>November 2015 - Januar 2018</h4>E-Commerce Manager
               Genuine
               Peak Sarl
-
             </li>
             <li>
               <h4>April 2015 - November 2015</h4>Nachwuchsscout 1. FC
               Kaiserslautern GmbH & Co. KGaA
-
             </li>
             <li>
               <h4>Oktober 2014 - Oktober 2015</h4>Plattform Manager
               DAW/DTW
               Logstocks GmbH
-
             </li>
             <li>
               <h4>Oktober 2011 - März 2015</h4>Trainer
